Transpiler: Kleinere Code-Anpassungen